--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.6.0"
+    "react-hook-form": "^7.39.1",
+    "react-icons": "^4.6.0",
+    "react-select": "^5.6.0",
+    "react-toastify": "^9.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
